--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Todo Mascotas</title>
 </head>
@@ -53,31 +53,41 @@
         <section class="Servicios">
             <div class="Consulta">
                 <!-- Titulo y descripcion del] un servicio -->
-                <p><span>Consultas</span>Brindamos atención profesional y personalizada para el cuidado de tu mascota. Evaluamos su estado de salud, resolvemos dudas y ofrecemos el mejor tratamiento preventivo o correctivo según sus necesidades. Nuestro objetivo es garantizar su bienestar y detectar cualquier problema a tiempo.</p>
+                <p><span>Consultas</span>Brindamos atención profesional y personalizada para el cuidado de tu mascota.
+                    Evaluamos su estado de salud, resolvemos dudas y ofrecemos el mejor tratamiento preventivo o
+                    correctivo según sus necesidades. Nuestro objetivo es garantizar su bienestar y detectar cualquier
+                    problema a tiempo.</p>
                 <!-- Icono representativo del servicio -->
                 <img src="../img/servicios/consultas.png" alt="Consultas">
             </div>
             <div class="Vacuna Reves">
                 <!-- Titulo y descripcion del] un servicio -->
-                <p><span>Vacunación y desparacitación</span>Mantén a tu mascota protegida con nuestro plan de vacunación y desparasitación. Un control adecuado es clave para su salud y la de toda la familia.</p>
+                <p><span>Vacunación y desparacitación</span>Mantén a tu mascota protegida con nuestro plan de vacunación
+                    y desparasitación. Un control adecuado es clave para su salud y la de toda la familia.</p>
                 <!-- Icono representativo del servicio -->
                 <img src="../img/servicios/vacuna.webp" alt="Vacunación">
             </div>
             <div class="Emergencia">
                 <!-- Titulo y descripcion del] un servicio -->
-                <p><span>Cirugías y emergencias</span>Contamos con un quirófano totalmente equipado para realizar cirugías de rutina y procedimientos especializados con la máxima seguridad. Además, ofrecemos atención en casos de emergencia las 24hs.</p>
+                <p><span>Cirugías y emergencias</span>Contamos con un quirófano totalmente equipado para realizar
+                    cirugías de rutina y procedimientos especializados con la máxima seguridad. Además, ofrecemos
+                    atención en casos de emergencia las 24hs.</p>
                 <!-- Icono representativo del servicio -->
                 <img src="../img/servicios/emergencias.png" alt="Emergencias">
             </div>
             <div class="Estetica Reves">
                 <!-- Titulo y descripcion del] un servicio -->
-                <p><span>Peluquería y estética</span>Ofrecemos servicios de baño, corte de pelo, limpieza de oídos y cuidado de uñas con productos de alta calidad. Adaptamos cada servicio según la raza y el tipo de pelaje para garantizar su bienestar y belleza.</p>
+                <p><span>Peluquería y estética</span>Ofrecemos servicios de baño, corte de pelo, limpieza de oídos y
+                    cuidado de uñas con productos de alta calidad. Adaptamos cada servicio según la raza y el tipo de
+                    pelaje para garantizar su bienestar y belleza.</p>
                 <!-- Icono representativo del servicio -->
                 <img src="../img/servicios/estetica.png" alt="Estetica">
             </div>
             <div class="Producto">
                 <!-- Titulo y descripcion del] un servicio -->
-                <p><span>Venta de productos</span>Encuentra todo lo que necesitas para tu mascota en nuestra tienda. Disponemos de una amplia variedad de alimentos balanceados, snacks, accesorios, productos de higiene y mucho más. Todo pensado para brindarle una vida más saludable y feliz.</p>
+                <p><span>Venta de productos</span>Encuentra todo lo que necesitas para tu mascota en nuestra tienda.
+                    Disponemos de una amplia variedad de alimentos balanceados, snacks, accesorios, productos de higiene
+                    y mucho más. Todo pensado para brindarle una vida más saludable y feliz.</p>
                 <!-- Icono representativo del servicio -->
                 <img src="../img/servicios/productos.png" alt="Productos">
             </div>
