--- a/pages/adopcion.html
+++ b/pages/adopcion.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- Menu de navegacion para moverse por los diferentes htmls -->
+    <!-- Menu de navegacion con boostrap -->
     <header>
         <nav class="navbar navbar-expand-lg ColorNavBar">
             <div class="container-fluid">
@@ -23,13 +23,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link Probando" href="servicios.html">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="nuestro-equipo.html">Nuestro equipo</a>
+                            <a class="nav-link" aria-current="page" href="adopcion.html">Adoptar</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="faq.html">Preguntas frecuentes</a>
@@ -50,6 +50,7 @@
         <!-- Titulo principal -->
         <h1>¡Ellos te esperan!</h1>
         <section class="ContenidoAdopcion">
+            <!-- Agrupamos contenido para un mejor manejo -->
             <div class="FilaAdopcion">
                 <div>
                     <img src="../img/adopcion/perro1.jpg" alt="">
@@ -67,6 +68,7 @@
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
             </div>
+            <!-- Agrupamos contenido para un mejor manejo -->
             <div class="FilaAdopcion">
                 <div>
                     <img src="../img/adopcion/perro3.jpg" alt="">
@@ -84,6 +86,7 @@
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
             </div>
+            <!-- Agrupamos contenido para un mejor manejo -->
             <div class="FilaAdopcion">
                 <div>
                     <img src="../img/adopcion/perro5.jpg" alt="">
@@ -101,6 +104,7 @@
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
             </div>
+            <!-- Agrupamos contenido para un mejor manejo -->
             <div class="FilaAdopcion ProbandoEliminar">
                 <div>
                     <img src="../img/adopcion/perro7.jpg" alt="">
@@ -148,8 +152,6 @@
                 <p>Lunes a Sabados de 8am a 22pm</p>
             </div>
         </div>
-        <!-- Seccion derecha del footer, donde se muestra la direccion y horario de atecion -->
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
