--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- Menu de navegacion para moverse por los diferentes htmls -->
+    <!-- Menu de navegacion con boostrap -->
     <header>
         <nav class="navbar navbar-expand-lg ColorNavBar">
             <div class="container-fluid">
@@ -29,7 +29,7 @@
                             <a class="nav-link Probando" href="pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/nuestro-equipo.html">Nuestro equipo</a>
+                            <a class="nav-link" href="pages/adopcion.html">Adoptar</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pages/faq.html">Preguntas frecuentes</a>
@@ -47,23 +47,18 @@
     </header>
 
     <!-- Comienzo de la seccion principal de la pagina -->
-    <main>
+    <main class="index">
         <!-- Titulo principal y descripcion breve de la veterinaria-->
         <h1>Veterinaria Todo Mascotas</h1>
-        <p>En nuestra veterinaria, nos apasiona el bienestar de tus animales. Contamos con un equipo de profesionales
-            comprometidos a ofrecer atención integral para tu mascota, desde consultas generales hasta cuidados
-            especializados. Sabemos que tus compañeros son parte de la familia, y por eso, en Todo Mascotas nos
-            esforzamos por brindarles la mejor atención en un ambiente cálido y seguro. Tu tranquilidad y la salud de tu
-            mascota son nuestra prioridad. </p>
+        <p>Sabemos que tus compañeros son parte de la familia, y por eso, en Todo Mascotas nos
+            esforzamos por brindarles la mejor atención en un ambiente cálido y seguro.<strong>Tu tranquilidad y la salud de tu mascota son nuestra prioridad.</strong></p>
 
         <!-- Seccion donde se muestran imagenes de las instalaciones dentro de la veterinaria con una descripcion breve -->
         <div class="nuestras-instalaciones">
-            <h3>Nuestras instalaciones</h3>
-            <p>En Todo Mascotas, nuestras instalaciones están diseñadas para ofrecer la mejor experiencia tanto a ti
-                como a tu mascota. Contamos con un área de atención al cliente, un consultorio equipado con tecnología
-                avanzada, y una sala de cirugía. Además, disponemos de una zona de recuperación cómoda y tranquila y
-                también contamos con una zona de adopción.</p>
-            <!-- Imagen de las instalaciones -->
+            <h2>Nuestras instalaciones</h2>
+            <p>Nuestras instalaciones están diseñadas para ofrecer la mejor experiencia tanto a ti
+                como a tu mascota.</p>
+            <!-- Carrusel de boostrap con imagenes de las instalaciones -->
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -89,12 +84,11 @@
             </div>
         </div>
         <!-- Seccion donde se muestran las mascotas que se encuentran en adopcion -->
-        <h2>¡Conoce a nuestros adorables cachorros en busca de un hogar!</h2>
-        <p>Aquí podrás ver a los peluditos que están disponibles para adopción. Cada uno con su propia personalidad y
-            mucha ternura, esperando ser parte de una familia amorosa. Desliza y descubre el compañero perfecto para ti.
-            ¡Tu próximo amigo te está esperando, no dudes en consultar!</p>
+        <h2>Conoce a nuestros animalitos en busca de un hogar</h2>
+        <p>Estos son algunos de los tantos animales que buscan un hogar</p>
+        <a href="pages/adopcion.html">¿Descubre a tu compañero/a perfecto!</a>
         <div>
-            <!-- Imagen de las mascotas en adopcion -->
+            <!-- Carrusel de boostrap con imagenes de las mascotas en adopcion -->
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -173,8 +167,6 @@
                 <p>Lunes a Sabados de 8am a 22pm</p>
             </div>
         </div>
-        <!-- Seccion derecha del footer, donde se muestra la direccion y horario de atecion -->
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
