--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- Menu de navegacion para moverse por los diferentes htmls -->
+    <!-- Menu de navegacion con boostrap -->
     <header>
         <nav class="navbar navbar-expand-lg ColorNavBar">
             <div class="container-fluid">
@@ -23,19 +23,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link Probando" href="servicios.html">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="nuestro-equipo.html">Nuestro equipo</a>
+                            <a class="nav-link" href="adopcion.html">Adoptar</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="faq.html">Preguntas frecuentes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -107,8 +107,6 @@
                 <p>Lunes a Sabados de 8am a 22pm</p>
             </div>
         </div>
-        <!-- Seccion derecha del footer, donde se muestra la direccion y horario de atecion -->
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
