--- a/pages/faq.html
+++ b/pages/faq.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- Menu de navegacion para moverse por los diferentes htmls -->
+    <!-- Menu de navegacion con boostrap -->
     <header>
         <nav class="navbar navbar-expand-lg ColorNavBar">
             <div class="container-fluid">
@@ -23,16 +23,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link Probando" href="servicios.html">Servicios</a>
+                            <a class="nav-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="nuestro-equipo.html">Nuestro equipo</a>
+                            <a class="nav-link" href="adopcion.html">Adoptar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="faq.html">Preguntas frecuentes</a>
+                            <a class="nav-link active" aria-current="page" href="faq.html">Preguntas frecuentes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
@@ -49,18 +49,17 @@
     <main class="MainFaq">
         <!-- Titulo principal -->
         <h1>Preguntas Frecuentes</h1>
-        <!-- Comienzo de seccion en donde se enlistan las preguntas frecuentes sobre la veterinaria -->
-
+        <!-- Comienzo de seccion en donde se enlistan con boostrap las preguntas frecuentes sobre la veterinaria -->
         <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapseOne">
                         ¿Cuáles son los horarios de atención?
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
                     <div class="accordion-body">
                         <strong>¿Cuáles son los horarios de atención?</strong> Nuestro horario es de lunes a sabados de
                         8:00 a 22:00. Los domingos y feriados estamos cerrados.
@@ -289,8 +288,6 @@
                 <p>Lunes a Sabados de 8am a 22pm</p>
             </div>
         </div>
-        <!-- Seccion derecha del footer, donde se muestra la direccion y horario de atecion -->
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
