--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Todo Mascotas</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -86,7 +86,7 @@
         <!-- Seccion donde se muestran las mascotas que se encuentran en adopcion -->
         <h2>Conoce a nuestros animalitos en busca de un hogar</h2>
         <p>Estos son algunos de los tantos animales que buscan un hogar</p>
-        <a href="pages/adopcion.html">¿Descubre a tu compañero/a perfecto!</a>
+        <a href="pages/adopcion.html">¡Descubre a tu compañero/a perfecto!</a>
         <div>
             <!-- Carrusel de boostrap con imagenes de las mascotas en adopcion -->
             <div id="carouselExampleCaptions" class="carousel slide">
