--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Todo Mascotas</title>
 </head>
 
@@ -50,8 +50,8 @@
         <!-- Titulo principal -->
         <h1>Formulario de contacto</h1>
         <!-- Formulario para enviar la consulta a la veterinaria -->
-        <h3>¡Envianos cualquier consulta que tengas!</h3>
-        <section class="Form">
+        <h2>¡Envianos cualquier consulta que tengas!</h3>
+        <div class="Form">
             <form class="Formulario" action="/enviar" method="post">
                 <div class="SeccionForm">
                     <label for="nombre">Nombre:</label>
@@ -77,10 +77,10 @@
                 </div>
                 <input class="BtnEnviar" type="submit" value="Enviar">
             </form>
-        </section>
+        </div>
     </main>
     <!-- Comienzo el pie de pagina -->
-    <footer>
+    <footer class="FooterCorto">
         <div class="ContenidoFooter">
             <div class="DerechosReservados">
                 <p>&copy; Todos los derechos reservados</p>
