--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Todo Mascotas</title>
 </head>
 
@@ -50,7 +50,7 @@
         <!-- Titulo principal -->
         <h1>Nuestro servicios</h1>
         <!-- Comienzo de seccion en donde mostramos los servicios de la veterinaria -->
-        <section class="Servicios">
+        <div class="Servicios">
             <div class="Consulta">
                 <!-- Titulo y descripcion del un servicio -->
                 <p><span>Consultas</span>Brindamos atención profesional y personalizada para el cuidado de tu mascota.
@@ -91,7 +91,7 @@
                 <!-- Icono representativo del servicio -->
                 <img src="../img/servicios/productos.png" alt="Productos">
             </div>
-        </section>
+        </div>
     </main>
     <!-- Comienzo el pie de pagina -->
     <footer>
