--- a/pages/adopcion.html
+++ b/pages/adopcion.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description"
+        content="Descubre mascotas en adopción, conoce sus historias y dales una segunda oportunidad. Adopta un amigo fiel y cambia una vida hoy mismo.">
+    <meta name="keywords"
+        content="adopción de mascotas, perros en adopción, gatos en adopción, rescate animal, refugio de mascotas, adoptar un perro, adoptar un gato, adopción responsable">
+    <meta name="author" content="Todo Mascotas">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -53,17 +60,17 @@
             <!-- Agrupamos contenido para un mejor manejo -->
             <div class="FilaAdopcion">
                 <div>
-                    <img src="../img/adopcion/perro1.jpg" alt="">
+                    <img src="../img/adopcion/perro1.jpg" alt="Perro en adopcion">
                     <h3>Cusco - Macho- 6 años </h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
                 <div>
-                    <img src="../img/adopcion/perro2.jpg" alt="">
+                    <img src="../img/adopcion/perro2.jpg" alt="Perro en adopcion">
                     <h3>Ragnar - Macho- 5 años</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
                 <div>
-                    <img src="../img/adopcion/gato1.jpg" alt="">
+                    <img src="../img/adopcion/gato1.jpg" alt="Gato en adopcion">
                     <h3>Isabel - Hembra- 1 año</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
@@ -71,17 +78,17 @@
             <!-- Agrupamos contenido para un mejor manejo -->
             <div class="FilaAdopcion">
                 <div>
-                    <img src="../img/adopcion/perro3.jpg" alt="">
+                    <img src="../img/adopcion/perro3.jpg" alt="Perro en adopcion">
                     <h3>Lola - Hembra - 2 años</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
                 <div>
-                    <img src="../img/adopcion/gato2.jpg" alt="">
+                    <img src="../img/adopcion/gato2.jpg" alt="Gato en adopcion">
                     <h3>Ramon - Macho - 2 años</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
                 <div>
-                    <img src="../img/adopcion/perro4.jpg" alt="">
+                    <img src="../img/adopcion/perro4.jpg" alt="Perro en adopcion">
                     <h3>Felipe - Macho - 4 años</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
@@ -89,17 +96,17 @@
             <!-- Agrupamos contenido para un mejor manejo -->
             <div class="FilaAdopcion">
                 <div>
-                    <img src="../img/adopcion/perro5.jpg" alt="">
+                    <img src="../img/adopcion/perro5.jpg" alt="Perro en adopcion">
                     <h3>Tana - Hembra - 2 años</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
                 <div>
-                    <img src="../img/adopcion/gato3.jpg" alt="">
+                    <img src="../img/adopcion/gato3.jpg" alt="Gato en adopcion">
                     <h3>Kata - Hembra - 3 meses</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
                 <div>
-                    <img src="../img/adopcion/perro6.jpg" alt="">
+                    <img src="../img/adopcion/perro6.jpg" alt="Perro en adopcion">
                     <h3>Luz - Hembra - 3 meses</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
@@ -107,17 +114,17 @@
             <!-- Agrupamos contenido para un mejor manejo -->
             <div class="FilaAdopcion ProbandoEliminar">
                 <div>
-                    <img src="../img/adopcion/perro7.jpg" alt="">
+                    <img src="../img/adopcion/perro7.jpg" alt="Perro en adopcion">
                     <h3>Colo - Macho - 2 años</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
                 <div>
-                    <img src="../img/adopcion/gato4.jpg" alt="">
+                    <img src="../img/adopcion/gato4.jpg" alt="Gato en adopcion">
                     <h3>Sol - Hembra - 4 meses</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
                 <div>
-                    <img src="../img/adopcion/gato5.jpg" alt="">
+                    <img src="../img/adopcion/gato5.jpg" alt="Gato en adopcion">
                     <h3>Mili - Hembra - 1 año</h3>
                     <a href="contacto.html">¡Adoptar!</a>
                 </div>
