--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description"
+        content="¿Necesitas agendar una cita o resolver alguna duda? Contáctanos a través de nuestro formulario. ¡Estamos para ayudarte!">
+    <meta name="keywords"
+        content="contacto veterinaria, clínica veterinaria, consulta para mascotas, pedir cita veterinaria, atención veterinaria, servicio al cliente veterinaria, ayuda para dueños de mascotas">
+    <meta name="author" content="Todo Mascotas">
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -51,33 +59,33 @@
         <h1>Formulario de contacto</h1>
         <!-- Formulario para enviar la consulta a la veterinaria -->
         <h2>¡Envianos cualquier consulta que tengas!</h3>
-        <div class="Form">
-            <form class="Formulario" action="/enviar" method="post">
-                <div class="SeccionForm">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="Juan" onfocus="this.placeholder=''"
-                        onblur="this.placeholder='Juan'">
-                </div>
-                <div class="SeccionForm">
-                    <label for="apellido">Apellido:</label>
-                    <input type="text" name="apellido" id="apellido" placeholder="Pérez" onfocus="this.placeholder=''"
-                        onblur="this.placeholder='Pérez'">
-                </div>
-                <div class="SeccionForm">
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email" placeholder="juanperez12@gmail.com"
-                        onfocus="this.placeholder=''" onblur="this.placeholder='juanperez12@gmail.com'">
-                </div>
-                <div class="SeccionForm">
-                    <label for="mensaje">Mensaje:</label>
-                    <textarea name="mensaje" id="mensaje"
-                        placeholder="Me gustaria reservar dia y hora para bañar a mi perro"
-                        onfocus="this.placeholder=''"
-                        onblur="this.placeholder='Me gustaria reservar dia y hora para bañar a mi perro'"></textarea>
-                </div>
-                <input class="BtnEnviar" type="submit" value="Enviar">
-            </form>
-        </div>
+            <div class="Form">
+                <form class="Formulario" action="/enviar" method="post">
+                    <div class="SeccionForm">
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" name="nombre" id="nombre" placeholder="Juan" onfocus="this.placeholder=''"
+                            onblur="this.placeholder='Juan'">
+                    </div>
+                    <div class="SeccionForm">
+                        <label for="apellido">Apellido:</label>
+                        <input type="text" name="apellido" id="apellido" placeholder="Pérez"
+                            onfocus="this.placeholder=''" onblur="this.placeholder='Pérez'">
+                    </div>
+                    <div class="SeccionForm">
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email" placeholder="juanperez12@gmail.com"
+                            onfocus="this.placeholder=''" onblur="this.placeholder='juanperez12@gmail.com'">
+                    </div>
+                    <div class="SeccionForm">
+                        <label for="mensaje">Mensaje:</label>
+                        <textarea name="mensaje" id="mensaje"
+                            placeholder="Me gustaria reservar dia y hora para bañar a mi perro"
+                            onfocus="this.placeholder=''"
+                            onblur="this.placeholder='Me gustaria reservar dia y hora para bañar a mi perro'"></textarea>
+                    </div>
+                    <input class="BtnEnviar" type="submit" value="Enviar">
+                </form>
+            </div>
     </main>
     <!-- Comienzo el pie de pagina -->
     <footer class="FooterCorto">
