--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description"
+        content="¿Tienes dudas sobre el cuidado de tu mascota o nuestros servicios? Encuentra respuestas en nuestra sección de preguntas frecuentes.">
+    <meta name="keywords"
+        content="preguntas frecuentes veterinaria, cuidado de mascotas, salud animal, adopción de mascotas, vacunación de mascotas, servicios veterinarios, bienestar animal, información para dueños de mascotas">
+    <meta name="author" content="Todo Mascotas">
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
