--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description"
+        content="Brindamos servicios de calidad: consultas, vacunación, cirugía, desparasitación y peluquería canina. ¡Cuidamos a tu mascota con amor!">
+    <meta name="keywords"
+        content="veterinaria, consulta veterinaria, vacunación de mascotas, cirugía para mascotas, cuidado de perros y gatos, peluquería canina, salud animal">
+    <meta name="author" content="Todo Mascotas">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -58,14 +65,14 @@
                     correctivo según sus necesidades. Nuestro objetivo es garantizar su bienestar y detectar cualquier
                     problema a tiempo.</p>
                 <!-- Icono representativo del servicio -->
-                <img src="../img/servicios/consultas.png" alt="Consultas">
+                <img src="../img/servicios/consultas.png" alt="Consultas veterinaria">
             </div>
             <div class="Vacuna Reves">
                 <!-- Titulo y descripcion del] un servicio -->
                 <p><span>Vacunación y desparacitación</span>Mantén a tu mascota protegida con nuestro plan de vacunación
                     y desparasitación. Un control adecuado es clave para su salud y la de toda la familia.</p>
                 <!-- Icono representativo del servicio -->
-                <img src="../img/servicios/vacuna.webp" alt="Vacunación">
+                <img src="../img/servicios/vacuna.webp" alt="Vacunación veterinaria">
             </div>
             <div class="Emergencia">
                 <!-- Titulo y descripcion del] un servicio -->
@@ -73,7 +80,7 @@
                     cirugías de rutina y procedimientos especializados con la máxima seguridad. Además, ofrecemos
                     atención en casos de emergencia las 24hs.</p>
                 <!-- Icono representativo del servicio -->
-                <img src="../img/servicios/emergencias.png" alt="Emergencias">
+                <img src="../img/servicios/emergencias.png" alt="Emergencias veterinaria">
             </div>
             <div class="Estetica Reves">
                 <!-- Titulo y descripcion del] un servicio -->
@@ -81,7 +88,7 @@
                     cuidado de uñas con productos de alta calidad. Adaptamos cada servicio según la raza y el tipo de
                     pelaje para garantizar su bienestar y belleza.</p>
                 <!-- Icono representativo del servicio -->
-                <img src="../img/servicios/estetica.png" alt="Estetica">
+                <img src="../img/servicios/estetica.png" alt="Estetica veterinaria">
             </div>
             <div class="Producto">
                 <!-- Titulo y descripcion del] un servicio -->
@@ -89,7 +96,7 @@
                     Disponemos de una amplia variedad de alimentos balanceados, snacks, accesorios, productos de higiene
                     y mucho más. Todo pensado para brindarle una vida más saludable y feliz.</p>
                 <!-- Icono representativo del servicio -->
-                <img src="../img/servicios/productos.png" alt="Productos">
+                <img src="../img/servicios/productos.png" alt="Productos veterinaria">
             </div>
         </div>
     </main>
